temp fix overlapping post UI, closes #134

--- a/src/style/post.css
+++ b/src/style/post.css
@@ -129,7 +129,6 @@
 .postThumbnail {
   position: relative;
   margin-right: 3px;
-  min-width: 100px;
 }
 .postThumbnail img {
   width: 300px;
